apps/traefik/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ui
  namespace: monitoring
spec:
  entryPoints:
  - grafana
  tls:
    certResolver: letsencrypt
  routes:
  - match: Host(`jhhomehub.gonetis.com`)
    kind: Rule
    services:
    - name: monitoring-grafana
      port: 80
