apps/traefik/rabbitmq-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rabbitmq-ui
  namespace: rabbitmq
spec:
  entryPoints:
  - rabbitmq
  routes:
  - match: Host(`jhhomehub.gonetis.com`)
    kind: Rule
    services:
    - name: rabbitmq
      port: 15672
